--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -2,7 +2,7 @@ name: Sync Fork
 
 on:
   push:
-    branches: [setting/#2-deploy] # main 브랜치에 push될 때 실행
+    branches: [main] # main 브랜치에 push될 때 실행
 
 jobs:
   sync:
@@ -17,4 +17,5 @@ jobs:
       - name: Push to fork
         run: |
           git remote add fork https://${{ secrets.SYNC_TOKEN }}@github.com/suki186/FE.git
-          git push fork setting/#2-deploy:test --force
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          git push fork $BRANCH_NAME --force
