🔧 : json파일 import 가능하도록

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ES6",
     "module": "commonjs",
     "strict": true,
+    "resolveJsonModule": true, // json import
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
